--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Benefits of Navratri Fasting | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>My message to Reform supporters</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2131,7 +2131,7 @@
                     <div class="video-info">
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session (GOLD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2263,7 +2263,7 @@
                     <div class="video-info">
                         <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 28, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>My message to Reform supporters</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5949,7 +5949,7 @@
                         <div class="video-info">
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session (GOLD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -5993,7 +5993,7 @@
                         <div class="video-info">
                             <h3>[REAL ACCOUNT] Forex & CFD Expert Advisor Livetrading + Q&A Session</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 28, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Benefits of Navratri Fasting | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8739,7 +8739,7 @@
                         <div class="video-info">
                             <h3>Testing out the jus roll supermarket pizza dough, baked on the Ooni Koda 2 #pizza #pizzadoughrecipe</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
