--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Liberate Your Mind | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">53 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -1355,7 +1355,7 @@
                     <div class="video-info">
                         <h3>Does today's news make you anxious?</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Liberate Your Mind | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">53 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7715,7 +7715,7 @@
                         <div class="video-info">
                             <h3>Does today's news make you anxious?</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
