--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5151,7 +5151,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Sensing the Power of Now</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
