--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">58 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -761,7 +761,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1388,7 +1388,7 @@
                     <div class="video-info">
                         <h3>Burrata & Anchovy Pizza Napoletana ❤️🔥🍕#shorts #pizza</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>#Throwback Sadhguru Brings Devi to Life on Canvas</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">58 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7506,7 +7506,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8849,7 +8849,7 @@
                         <div class="video-info">
                             <h3>Burrata & Anchovy Pizza Napoletana ❤️🔥🍕#shorts #pizza</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
